fix few icons
Squashed commit of the following:

commit be2e6ba3415a8b82a726bbfc70fc6720bf83a561
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Jun 5 22:05:24 2024 +0300

    fix few icons

--- a/Extension/src/pages/common/styles/icons.pcss
+++ b/Extension/src/pages/common/styles/icons.pcss
@@ -22,17 +22,6 @@
         }
     }
 
-    &--trash {
-        width: 14px;
-        height: 17px;
-    }
-
-    /* FIXME(Slava): check this style */
-    &--reload {
-        width: 22px;
-        height: 15px;
-    }
-
     &--select {
         width: 14px;
         height: 8px;
