--- a/Extension/src/pages/options/components/Filters/filter.pcss
+++ b/Extension/src/pages/options/components/Filters/filter.pcss
@@ -6,7 +6,8 @@
     min-height: 70px;
 
     &__title {
-        display: inline-block;
+        display: flex;
+        align-items: flex-end;
 
         font-weight: 500;
         font-size: 16px;
@@ -94,9 +95,11 @@
     }
 
     &__remove {
+        background-color: transparent;
+        border: 0;
+        padding: 0;
         color: var(--red400);
         position: relative;
-        top: -4px;
         cursor: pointer;
     }
 
