--- a/Extension/src/pages/options/components/ui/icons.pcss
+++ b/Extension/src/pages/options/components/ui/icons.pcss
@@ -24,11 +24,6 @@
         color: var(--gray700);
     }
 
-    &--reload {
-        width: 22px;
-        height: 15px;
-    }
-
     &--menu {
         width: 24px;
         height: 26px;
